tests/snapshots/regression/recovery__t16_perform_missing_dot_contextual.snap
---
source: tests/regression_snapshots.rs
---
$ flux --no-cache tests/fixtures/recovery/t16_perform_missing_dot_contextual.flx
exit_code: 1

--> compiler error[E034]: UNEXPECTED TOKEN

Expected `.` between effect and operation in `perform`.

  --> tests/fixtures/recovery/t16_perform_missing_dot_contextual.flx:1:20
  |
1 | let x = perform IO print("hi")
  |                    ^^^^^

Hint:
  Perform expressions use `perform Effect.op(args...)`.
